# vibecast

./: .agentdb-fast  .editorconfig  .env.example  .eslintrc.js  .eslintrc.json  .gitignore  .hackathon.json  .npmignore  .roomodes  5-MODEL-COMPARISON.md  ADVANCED-FEATURES-ANALYSIS.md  AGENTDB-ALPHA-REVIEW.md  AGENTDB-V3-ALPHA-REVIEW.md  AGENTDB.md  AGENTDB_ADVANCED_FEATURES.md  AGENTDB_COMPLETE_STORY.md  AGENTDB_REVIEW.md  AGENTDB_STATUS.md  AGENTDB_TESTING_SUMMARY.md  AGENTDB_V2.0.2_FINDINGS.md  AGENTDB_V2.0.3_VALIDATION.md  AGENTIC_ROBOTICS_REVIEW.md  AGENT_5_DELIVERABLE.md  AGENT_5_SUMMARY.txt  AGENT_SWARM_3_SUMMARY.md  AGENT_SWARM_4_DELIVERY.md  AGI-ATTENTION-ARCHITECTURE.md  AIRTABLE_STRUCTURE.md  AI_NATIVE_PLATFORM.md  ANALYSIS.md  API-TEST-RESULTS.md  ARCHITECTURE.md  ATTENTION_MECHANISM_ANALYSIS.md  BACKTESTING_REPORT.md  BENCHMARK_README.md  BENCHMARK_RESULTS.md  BIOPLAUSIBLE-ATTENTION-DESIGN.md  BREAKTHROUGH_DISCOVERIES.md  CAPABILITIES.md  CARGO_CRATE_ISSUES.md  (+277 more)
.claude/: config.json  memory.db
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json
.hive-mind/: config.json  hive.db  hive.db-shm  hive.db-wal
.roo/: mcp.json
.swarm/: memory.db  memory.db-shm  memory.db-wal  model-router-state.json  schema.sql  state.json
agent-swarm-conductor/: package.json
agentdb-npm/: README.md  package.json  tsconfig.json
agentdb-wasm/: Cargo.toml  README.md  agentdb.d.ts
agentdb-wasm/benches/: agentdb_bench.rs
agentdb-wasm/src/: database.rs  lib.rs  types.rs  wasm_bindings.rs
agentdb-wasm/tests/: wasm_tests.rs
agentic-data-test-results/: TEST-RESULTS.md  cicd-pipeline-data.json  security-vulnerability-data.json  stock-market-data.json
aisp-open-core-upstream/: HUMAN_GUIDE.md  reference.md
aisp-wasm/: .gitignore  README.md
anomaly-detector/: Makefile  go.mod
archive/: 00_global_tech_stack.md  00_overview.md  01_project_bootstrap.md  02_core_domain_models.md  03_sensor_package.md  04_mapping_engine.md  05_navigation_filter.md  06_interfaces.md  07_docker_ops.md  08_mcp.md  implementation.md  ipcp-overview.md  phase1-quantum-sensors.md  research.md
benches/: checkpoint_benchmark.rs  comparison_benchmark.rs  graph_benchmark.rs
benchmark/: README.md  benchmark-runner.js  config.json  enhanced-scalability-benchmark.js  quick-benchmark.js  scalability-benchmark.js
benchmarks/: BENCHMARK_RESULTS.md  README.md  advanced-methods.js  agentdb-enhanced-optimized.js  agentdb-enhanced-predictor.js  agentdb-enhanced-simple.js  agentdb-integration.js  backtesting-framework.js  baseline-methods.js  basic-predictions.js  comprehensive-benchmark.js  ensemble-predictor.js  entropy_bench_test.go  generate-test-data.js  implementation-comparison.js  real-data-fetcher.js  realistic-market-generator.js  run-all.js  run-backtesting-comparison.js  run-benchmarks.js  run-core.js  run-ensemble-test.js  run-hyperparam-optimization.js  run-optimization-comparison.js  run-real-validation.js  run-realistic-validation.js  run-regime-optimization.js  run-simple-benchmark.js  stress-test.js  utils.js
config/: agentic-flow.policy.yaml  database.schema.sql
crates/langgraph-agentdb/: Cargo.toml
crates/langgraph-agentdb/src/: agentdb.rs  embeddings.rs  error.rs  lib.rs  patterns.rs  reflexion.rs
crates/langgraph-checkpoint/: Cargo.toml
crates/langgraph-checkpoint/src/: checkpoint.rs  error.rs  lib.rs  memory.rs  sqlite.rs
crates/langgraph-core/: Cargo.toml
crates/langgraph-core/src/: error.rs  graph.rs  lib.rs  message.rs  node.rs  reducer.rs  state.rs
crates/langgraph-napi/: Cargo.toml
crates/langgraph-napi/src/: lib.rs
crates/langgraph-wasm/: Cargo.toml
crates/langgraph-wasm/src/: checkpoint.rs  graph.rs  lib.rs  state.rs  utils.rs
crates/sevensense-core/: Cargo.toml  README.md
cuda-rust-wasm/: Cargo.toml  README.md  build.rs  (+3 more)
interplanetary-comms/gpu/: CMakeLists.txt  README.md  build.sh
interplanetary-comms/gpu/.swarm/: memory.db
interplanetary-comms/gpu/docker/: Dockerfile  docker-compose.yml
interplanetary-comms/gpu/docs/: CUDA_SETUP.md
interplanetary-comms/gpu/examples/: basic_transmission.cpp
interplanetary-comms/gpu/include/: gpu_common.cuh  signal_processing.cuh
interplanetary-comms/gpu/kernels/: GPU_KERNEL_SUMMARY.md  KERNEL_DOCUMENTATION.md  Makefile  kernel_launchers.cu  quantum_navigation_kernels.cu  quantum_navigation_kernels.h  signal_processing.cu  test_kernels.cu
interplanetary-comms/gpu/memory/: memory_manager.h
interplanetary-comms/gpu/memory/debug/: leak_detector.cu
interplanetary-comms/gpu/memory/multi_gpu/: multi_gpu_coordinator.cu
interplanetary-comms/gpu/memory/pool/: unified_memory_pool.cu
interplanetary-comms/gpu/memory/prefetch/: prefetch_engine.cu
interplanetary-comms/gpu/memory/strategies/: allocation_strategies.cu
interplanetary-comms/gpu/memory/transfer/: transfer_optimizer.cu
interplanetary-comms/gpu/optimization/: OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_REPORT.md  dimension_optimization_report.json  dimension_optimizer.py  final_optimization_report.json  gpu_profiler.py  kernel_fusion.py  kernel_fusion_report.json  memory_optimization_report.json  memory_optimizer.py  optimization_strategies.md  optimized_kernels.cu  performance_analysis_report.json  performance_dashboard.py  performance_validation.cu  validate_optimizations.py
interplanetary-comms/gpu/optimization/.swarm/: memory.db
interplanetary-comms/gpu/src/: gpu_common.cpp  signal_processor.cpp
interplanetary-comms/gpu/tests/: CMakeLists.txt  README.md  benchmark.sh  main.cpp  run_all_tests.cu  run_tests.sh
interplanetary-comms/gpu/tests/integration/: test_full_system.cu
interplanetary-comms/gpu/tests/performance/: benchmark_suite.cu
interplanetary-comms/gpu/tests/reports/: FINAL_INTEGRATION_TEST_REPORT.md  INTEGRATION_TEST_EXECUTION_REPORT.md  TECHNICAL_TEST_ANALYSIS.json
interplanetary-comms/gpu/tests/unit/: test_memory_validation.cu  test_quantum_compression.cu
interplanetary-comms/gpu/tests/utils/: cuda_error_check.h  cuda_test_framework.cuh
proxy/rust-proxy/: Cargo.toml
proxy/rust-proxy/src/: main.rs
(+1157 files in other folders)
