[package]
name = "agentdb-wasm"
version = "0.1.0"
authors = ["Agent Swarm <agent@vibecast.io>"]
edition = "2021"
description = "High-performance WASM database layer for franchise platform agent management"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
chrono = { version = "0.4", features = ["wasmbind", "serde"] }
uuid = { version = "1.6", features = ["v4", "fast-rng", "macro-diagnostics", "serde", "js"] }
thiserror = "1.0"
getrandom = { version = "0.2", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
  'Window',
  'Performance',
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.5"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true

[[bench]]
name = "agentdb_bench"
harness = false
