[package]
name = "langgraph-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WebAssembly bindings for LangGraph"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
langgraph-core = { path = "../langgraph-core" }
langgraph-checkpoint = { path = "../langgraph-checkpoint" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }

[dependencies.web-sys]
workspace = true
features = [
    "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
