[package]
name = "sevensense-core"
version = "0.1.0"
edition = "2021"
description = "Core types and traits for 7sense bioacoustic analysis"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
