[package]
name = "claude-proxy"
version = "1.0.0"
edition = "2021"
authors = ["rUv <ruv@vibecast.io>"]

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
actix-rt = "2.9"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
env_logger = "0.11"
log = "0.4"
chrono = "0.4"
dotenv = "0.15"
uuid = { version = "1.6", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
